# Project_1

Project1 copy/: pyproject.toml
Project1 copy/src/package/: cal.py
Project1 copy/tests/: test_main.py
Project1/src/package/: calculator.py
